cmake_minimum_required(VERSION 3.10)
project(cakitviewer_FEBD)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK REQUIRED gtkmm-3.0)
find_package(OpenCV REQUIRED)
include_directories($(OpenCV_INCLUDE_DIRS))
include_directories(${GTKMM_INCLUDE_DIRS})
include_directories(${GTK_INCLUDE_DIRS})
link_directories(${GTKMM_LIBRARY_DIRS})
link_directories(${GTK_LIBRARY_DIRS})
ADD_DEFINITIONS(${GTK_CFLAGS_OTHER})
add_executable(cakitviewer_FEBD cakit_main.cpp cakit.h)
target_link_libraries(cakitviewer_FEBD ${OpenCV_LIBS})
target_link_libraries(cakitviewer_FEBD ${GTKMM_LIBRARIES})
target_link_libraries(cakitviewer_FEBD ${GTK_LIBRARIES})
